src/gui/static/style.css
body {
  background: #fff;
  font-family: 'Roboto Slab', serif !important;
  margin: 0;
  padding: 0;
}

.content {
  max-width: 500px;
  margin: 0 auto;
}

.form-style input, .input-ish {
  border: 0;
  font-size: 2em;
  width: 100%;
  margin-bottom: 0.5em;
  border-bottom: 1px solid #ed7000;
}

.feedback-form input {
  border: 1px solid;
  border-radius: 5px;
  font-size: 2em;
  width: 2em;
  padding: 0.1em;
  text-align: center;
}

input, textarea, select { font-family:inherit; }

.login {
  color: #ed7000;
  font-size: 3em;
  text-align: center;
}

.content > h2 {
  font-size: 1.5em;
  text-align: center;
  width: 100%;
}

.content-item h2 {

}

a > .content-item > h3, .course-details-box > h3 {
  margin: 2px;
}

hr {
  border-color: #ed7000;
}

.input-icon {
  padding-left: 30px;
  /*  max-width: 100%; */
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.input-icon-user {
  background: white url(heroicons/icon-user.svg) left no-repeat;
}

.input-icon-pw {
  background: white url(heroicons/icon-lock-closed.svg) left no-repeat;
}

@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'), url(https://fonts.gstatic.com/s/robotoslab/v9/BngMUXZYTXPIvIBgJJSb6ufN5qA.ttf) format('truetype');
}

.logo-main {
  width: 40%;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.content-item {
  background: #eee;
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 0.5em;
  z-index: 10;
  overflow: auto;
/*  width: 100%; */
}

.news-title {
  font-weight: bold;
}

.news img {
  margin-left: 50%;
  transform: translateX(-50%);
}

.news-date {
  text-align: right;
  color: #555;
}

.news-icon {
  float: right;
  margin: 0.5em;
  max-width: 26px;
}

#menu-container
{
  padding-top: 20px;
  display: block;
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menu-container input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: 15px;
  left: 0px;
  cursor: pointer;
  opacity: 0;
  z-index: 2001;
  -webkit-touch-callout: none;
}

#menu-container span
{
  display: block;
  width: 33px;
  height: 4px;
  left: 10px;
  margin-bottom: 5px;
  position: relative;
  background: #cdcdcd;
  border-radius: 3px;
  z-index: 2000;
  transform-origin: 4px 0px;
  transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.3s ease;
}

#menu-container span:first-child
{
  transform-origin: 0% 0%;
}

#menu-container span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

#menu-container input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}

#menu-container input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menu-container input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}

#menu
{
  position: absolute;
  width: 80%;
  opacity: 0;
  transition: opacity 0.3s;
  top: 0;
  background: #ddd;
  min-height: 100vh;
  z-index: -1000;
  display: none;
}

#menu-container input:checked ~ div
{
  display: block;
  opacity: 1;
  transition: opacity 0.3s;
  z-index: 1000;
}

#menu ul {
  list-style-type: none;
  margin-bottom: 0px;
  padding: 20px;
}

#menu li {
  padding-left: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 1.3em;
}

#menu h3 {
  size: 1.3em;
  padding: 5px;
  margin: 0px;
}

#menu a:link, #menu a:visited, #menu a:active {
  color: #222;
  text-decoration: none;
}

.portrait {
  background: #fff;
  border-radius: 50%;
  width: 40%;
}

.centered {
  margin-left: auto;
  margin-right: auto;
  display: block;
  text-align: center;
}

.ish-bg, .bg-ish {
  background: #ed7000;
}

.full-menu {
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow:auto;
}

.full-menu-placeholder {
  width: 100%;
  padding-top: 15px;
  padding-bottom: 15px;
  overflow:auto;
}
.half-menu {
  width: 50%;
  float: left;
  padding-top: 3px;
  padding-bottom: 3px;
}

.div-link:link, .div-link:visited, .div-link:hover, .div-link:active {
  text-decoration: none;
  color: #000;
}

.course-style-box {
  width: 1.5em;
  height: 1.5em;
  margin-top: 0.75em;
  margin-left: 0.7em;
}

.course-large-style-box {
  width: 10%;
  float: left;
  height: 3em;
}

.course-details-box {
  width: 90%;
  float:left;
}

.bg-white {
  background: #fff;
}

.chevron-back {
  height: 3em;
  opacity: 0.2;
  margin-left: 5px;
}

.hide-menu {
  display: none;
}

.icon-inline {
  height: 1em;
}

.large-padding {
  padding: 20px;
}

a.button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;

  text-decoration: none;
  color: initial;
}

.ig-button {
  margin: 0em;
  -moz-appearance: button;
  border: 2px solid #ed7000;
  border-radius: 5px;
  padding: 10px;
  font-size: 1.3em;
  background: #fff;
}

iframe {
  margin-left: 2%;
  width: 96%
}

.note-group-select-from-files {
  display: none;
}

.editable-content img {
  max-width: 96%;
  margin-left: 2%;
}

table {
  border: 0px;
}

td {
  padding: 3px;
  vertical-align: middle;
}

